# WorldDeveloper

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  README.md  dev.sh  docker-compose.yml
ai/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai/app/: __init__.py  config.py  db.py  main.py  profile_parser.py  skills_taxonomy.py  translate_engine.py  visa_guides.py
ai/dev_jobs_core/: __init__.py  dedup.py  filter.py  geo.py  intel.py  models.py  registry.py
ai/scripts/: backfill_company_domains.py  backfill_country.py  backfill_embeddings.py  backfill_experience.py  backfill_remote_eligibility.py  backfill_tags_normalize.py  backfill_text_reextract.py  company_locations.sql  enrich_companies_wikidata.py  enrich_company_summaries.py  eval_reranker.py  export_visa_dataset.py  gen_company_locations.py  import_lca_wages.py  mine_visa_unclear.py  probe_ats.py  seed_visa_guides.py  skill_match_eval.py  sponsor_match.py  train_visa_tagger.py  verify_ca_sponsors.py  verify_h1b_sponsors.py  verify_ind_sponsors.py  verify_uk_sponsors.py
ai/tests/: test_adzuna.py  test_application_kit_route.py  test_ashby.py  test_ats_url_encoding.py  test_backfill_company_domains.py  test_coach_route.py  test_companies_registry.py  test_country_guide.py  test_dedup.py  test_embed_text.py  test_etl_fetchers.py  test_experience.py  test_export_visa_dataset.py  test_fetch_unclear_jobs.py  test_filter.py  test_geo.py  test_greenhouse.py  test_hrmos.py  test_internal_auth.py  test_job_meta.py  test_lever.py  test_match_ca_register.py  test_match_h1b_register.py  (+38 more)
dev-jobs-mcp/: README.md  pyproject.toml
(+817 files in other folders)
