[project]
name = "dev-jobs-ai"
version = "0.1.0"
description = "FastAPI 임베딩 서비스 + ETL worker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.7",
]
dev = [
    "ruff>=0.7",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "dev_jobs_core"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
