[project]
name = "dev-jobs-mcp"
version = "0.6.0"
description = "해외 개발자 채용 공고 MCP 서버 (v0.6: Discipline Agents 그룹화 - omo 패턴)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.7",
]

[project.scripts]
dev-jobs-mcp = "dev_jobs_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["dev_jobs_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"dev_jobs_mcp/data/companies.json" = "dev_jobs_mcp/data/companies.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
